--- a/src/assets/styles/portfolio/Project.module.css
+++ b/src/assets/styles/portfolio/Project.module.css
@@ -33,7 +33,7 @@
 
 .left, .right {
   will-change: transform;
-  transition: transform 250ms ease-out, opacity 800ms ease-out;
+  transition: transform 250ms ease-out, opacity 250ms ease-out;
 }
 
 .left {
